[gd_scene load_steps=19 format=2]

[ext_resource path="res://Levels/Intro.gd" type="Script" id=1]
[ext_resource path="res://Assets/Dinos/blue-dino.png" type="Texture" id=2]
[ext_resource path="res://Levels/SceneTransitionRect.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD/HUDBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/GUI/MinimalPixel v2.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://HUD/HUDTheme.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 432, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 456, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 504, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 528, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 552, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[node name="Intro" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -22.0
margin_right = 20.0
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUDBackground" parent="CanvasLayer/NinePatchRect" instance=ExtResource( 4 )]
position = Vector2( 11, 5 )
scale = Vector2( 13, 13 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 500, 300 )
color = Color( 0.00784314, 0.117647, 0.0235294, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 500, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="CanvasLayer/ColorRect/VBoxContainer"]
margin_right = 500.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 12 )
text = "JACK'S DINO HALLOWEEN GAME"
align = 1
valign = 1

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/ColorRect/VBoxContainer"]
margin_top = 44.0
margin_right = 500.0
margin_bottom = 104.0

[node name="DescLabel" type="Label" parent="CanvasLayer/ColorRect/VBoxContainer/CenterContainer2"]
margin_left = 100.0
margin_right = 400.0
margin_bottom = 60.0
rect_min_size = Vector2( 300, 60 )
theme = ExtResource( 6 )
text = "Collect the candy for points. Find the diamond in the chest to move to the next level."
autowrap = true

[node name="CenterContainer3" type="CenterContainer" parent="CanvasLayer/ColorRect/VBoxContainer"]
margin_top = 108.0
margin_right = 500.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 80 )

[node name="ContLabel" type="Label" parent="CanvasLayer/ColorRect/VBoxContainer/CenterContainer3"]
margin_left = 125.0
margin_right = 375.0
margin_bottom = 92.0
rect_min_size = Vector2( 250, 75 )
theme = ExtResource( 6 )
text = "Arrow keys to move, up to Jump.

Spacebar to kick open treasure chests."
autowrap = true

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/ColorRect/VBoxContainer"]
margin_top = 204.0
margin_right = 500.0
margin_bottom = 284.0
rect_min_size = Vector2( 0, 80 )

[node name="Button" type="Button" parent="CanvasLayer/ColorRect/VBoxContainer/CenterContainer"]
margin_left = 200.0
margin_top = 15.0
margin_right = 300.0
margin_bottom = 65.0
rect_min_size = Vector2( 100, 50 )
theme = ExtResource( 6 )
text = "Play Game"

[node name="AnimatedSprite" type="AnimatedSprite" parent="CanvasLayer/ColorRect/VBoxContainer"]
position = Vector2( 66, 240 )
scale = Vector2( 4, 4 )
frames = SubResource( 5 )
animation = "idle"
frame = 3
playing = true

[node name="SceneTransitionRect" parent="." instance=ExtResource( 3 )]
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1500, 1500 )
not_intro = false

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="pressed" from="CanvasLayer/ColorRect/VBoxContainer/CenterContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
